[package]
name = "videohls-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
ffmpeg-next = "7.1.0"
notify = "8.0.0"
serde = "1.0.219"
serde_json = "1.0"
serde_derive = "1.0.219"
tokio = { version = "1.44.2", features = ["full"] }
toml = "0.8.20"
log = "0.4"
env_logger = "0.11"
rayon = "1.10"
ctrlc = "3.4"
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
